création de la liste d'utilisateur

--- a/src/index.html
+++ b/src/index.html
@@ -1,4 +1,9 @@
 <!doctype html>
+<!--
+Réalisation: Jean LAGNIAUX et Théo DENES
+Email: jeanlagniaux35@gmail.com
+Github: https://github.com/jeanlagniaux
+-->
 <html lang="fr">
 <head>
   <meta charset="utf-8">
