--- a/src/index.html
+++ b/src/index.html
@@ -5,6 +5,7 @@ Email: jeanlagniaux35@gmail.com
 Github: https://github.com/jeanlagniaux
 -->
 <html lang="fr">
+
 <head>
   <meta charset="utf-8">
   <title>Projet Kanban</title>
@@ -16,9 +17,12 @@ Github: https://github.com/jeanlagniaux
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
   <!-- CSS only -->
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
 </head>
+
 <body class="mat-typography">
   <app-root></app-root>
 </body>
+
 </html>
